Check Maven Central before Apache-specific repositories
GitHub Actions builds are hitting the rule from
https://infra.apache.org/infra-ban.html that disallows
excessive 404's on repository.apache.org, causing them to get banned.

This change should make various builds check Maven Central before
checking `repository.apache.org`, which hopefully should help.

--- a/packages/dev-deployment-kogito-quarkus-blank-app/pom.xml
+++ b/packages/dev-deployment-kogito-quarkus-blank-app/pom.xml
@@ -368,6 +368,11 @@
   </build>
   <repositories>
     <repository>
+      <id>central</id>
+      <name>Central Repository</name>
+      <url>https://repo.maven.apache.org/maven2</url>
+    </repository>
+    <repository>
       <id>apache.snapshots</id>
       <name>Apache Snapshot Repository</name>
       <url>https://repository.apache.org/snapshots</url>
